[tool.poetry]
name = "llm_atc"
version = "0.1.4"
description = "Tools for fine tuning and serving LLMs"
authors = ["Andrew Aikawa <asai@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.x"
omegaconf = "^2.3.0"
posthog = "^3.0.1"
prettytable = "^3.8.0"
click = "^8.1.6"

[tool.poetry.scripts]
llm-atc = "llm_atc.cli:cli"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"
black = "^23.7.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
